--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule ".vim/bundle/vim-scala"]
 	path = .vim/bundle/vim-scala
 	url = git://github.com/derekwyatt/vim-scala.git
+[submodule ".vim/bundle/vim-dart"]
+	path = .vim/bundle/vim-dart
+	url = git://github.com/loicfrering/vim-dart.git
