--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule ".vim/bundle/vim-dart"]
 	path = .vim/bundle/vim-dart
 	url = git://github.com/loicfrering/vim-dart.git
+[submodule ".vim/bundle/tagbar"]
+	path = .vim/bundle/tagbar
+	url = git://github.com/majutsushi/tagbar.git
