--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule ".vim/bundle/rust.vim"]
 	path = .vim/bundle/rust.vim
 	url = https://github.com/wting/rust.vim.git
+[submodule ".vim/bundle/vim-elixir.vim"]
+	path = .vim/bundle/vim-elixir.vim
+	url = https://github.com/elixir-lang/vim-elixir.git
