--- a/.gitconfig
+++ b/.gitconfig
@@ -36,9 +36,9 @@
 [core]
   whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
 [merge]
-  tool = mvim
-[mergetool "mvim"]
-  cmd=mvim -d -g $LOCAL $MERGED $REMOTE
+  tool = vim
+[mergetool "vim"]
+  cmd=vim -d $LOCAL $MERGED $REMOTE
   keepbackup=false
 [core]
   excludesfile=~/.gitignore
