--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,10 +19,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-#bind H resize-pane -L 5
-#bind J resize-pane -D 5
-#bind K resize-pane -U 5
-#bind L resize-pane -R 5
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
 # 256 colors
 set -g default-terminal "screen-256color"
