--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,18 +29,11 @@ bind L resize-pane -R 5
 set -g default-terminal "screen-256color"
 
 # theme colours
-set -g status-fg white
-set -g status-bg colour236
-setw -g window-status-fg white
-setw -g window-status-bg default
-setw -g window-status-attr default
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour240
-setw -g window-status-current-attr bright
-set -g pane-border-fg white
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg white
+set -g status-style fg=white,bg=colour236
+setw -g window-status-style fg=white,bg=default,default
+setw -g window-status-current-style fg=white,bg=colour240,bright
+set -g pane-border-style fg=white,bg=black
+set -g pane-active-border-style fg=white,bg=white
 
 # theme status bar
 #set -g status-justify centre
